changed the name on the tab

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>About - Vittorio Centore</title>
+  <title>About - Vittorio's Website</title>
   <meta content="Vittorio Centore portfolio" name="keywords" />
   <meta content="Vittorio Centore - Computer Science at University of Michigan" name="description" />
   <link href="assets/images/PixelMe_50x50.jpg" rel="icon" />
