--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Projects - Vittorio Centore</title>
+    <title>Projects - Vittorio's Website</title>
     <meta content="projects, portfolio, software development" name="keywords" />
     <meta content="Browse my software development projects and portfolio." name="description" />
     <link href="assets/images/PixelMe_50x50.jpg" rel="icon" />
