added search engine project

--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,12 @@
                   to make them better.
                 </p>
                 <p class="text-lg">
-                  What I love about coding is that it turns ideas into real systems people can actually use. I'm
+                  I moved from Italy to Miami, Florida when I was 10, and the U.S. gave me access to a world of
+                  technology and opportunity that I didn't have before. Since then, I've been obsessed with building and
+                  learning through code.
+                </p>
+                <p class="text-lg">
+                  What I love about coding is that it turns ideas into tools people can actually use. I'm
                   especially interested in <span class="font-semibold text-teal-600">full-stack development, AI, and
                     machine learning</span>, particularly when it comes to optimizing backend systems.
                 </p>
@@ -1337,11 +1342,6 @@
                   Right now, I'm working at <span class="font-semibold text-teal-600">AgentMail</span>, a YC-backed
                   startup, where I help build user-facing demos that clearly explain what's happening behind the scenes
                   while heavy backend processes are running.
-                </p>
-                <p class="text-lg">
-                  I moved from Italy to Miami, Florida when I was 10, and the U.S. gave me access to a world of
-                  technology and opportunity that I didn't have before. Since then, I've been obsessed with building and
-                  learning through code.
                 </p>
                 <p class="text-lg text-gray-500 italic">
                   If I'm not coding, I'm probably watching soccer or out and about with friends, but I'm always happy to
